# checkers-ai

./: .gitignore  CMakeLists.txt  Doxyfile  brain.cpp  brain.hpp  build.sh  cache.hpp  console_interface.cpp  evaluation.cpp  hyperparams.hpp  interface.cpp  interface.hpp  main.cpp  minimax.cpp  readme.md  versioning.cpp
data/: default_hyperparameters.json  default_statistics.json  default_tournament.json  tournament.json
documentation/: developer_documentation.md  user_documentation.md
libs/nlohmann/: json.hpp
src/: console_interface.cpp  constants.hpp  main.cpp  main_cli.cpp
src/ai/: agent.cpp  brain.cpp  brain.hpp  cache.cpp  console_interface.cpp  console_interface.hpp  evaluation.cpp  hyperparameters.cpp  hyperparams.hpp  interface.cpp  search_algorithms.cpp  statistics.cpp
src/ai/includes/: agent.hpp  brain.hpp  cache.hpp  console_interface.hpp  evaluation.hpp  hyperparameters.hpp  search_algorithms.hpp  statistics.hpp
src/app/: app.cpp
src/app/includes/: app.hpp
src/communication/: console_interface.cpp  console_interface.hpp  debugging.cpp  game.cpp  interface.cpp
src/communication/includes/: console_interface.hpp  debugging.hpp  game.hpp  interface.hpp
src/includes/: constants.hpp  main_cli.hpp
src/meta/: statistics.cpp  timer.cpp  tournament.cpp
src/meta/includes/: statistics.hpp  timer.hpp  tournament.hpp
src/tests/: functionality_tests.cpp  performance_tests.cpp
